tests/sources/invalid/classes/field_access_type_errors.fire
// Field-access type errors: unknown field on a real class, and field
// access attempted on a non-class (primitive) type.
class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }
}

fn unknownField() -> int32 {
    f: Foo = Foo(1);
    y: int32 = f.notthere;  //~ ERROR FS-SEM-0010 @18
    return y;
}

fn main() -> int32 {
    x: int32 = 5;
    y: int32 = x.foo;  //~ ERROR FS-SEM-0010 @18
    return 0;
}
